--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Main Menu for your Slice of Life",
   "main": "main.js",
   "scripts": {
-    "dev":"webpack --watch",
+    "dev": "webpack --watch",
     "start": "electron ."
   },
   "repository": "https://github.com/ArekusuNaito/main-menu",
@@ -26,6 +26,7 @@
     "webpack": "^1.13.3"
   },
   "dependencies": {
+    "jquery": "^3.1.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   }
