--- a/package.json
+++ b/package.json
@@ -19,15 +19,20 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
+    "babel-plugin-transform-react-jsx": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "electron": "^1.4.1",
-    "webpack": "^1.13.3"
+    "electron-connect": "^0.6.1",
+    "fuse-box": "^1.3.118",
+    "gulp": "^3.9.1"
   },
   "dependencies": {
     "jquery": "^3.1.1",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "materialize-css": "^0.98.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.3.2",
+    "react-native-web": "0.0.72",
+    "react-router": "^3.0.2"
   }
 }
