--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp": "^3.9.1"
   },
   "dependencies": {
+    "fuse-box": "^1.3.120",
     "jquery": "^3.1.1",
     "materialize-css": "^0.98.0",
     "react": "^15.4.2",
